# remote-command-executor

./: CMakeLists.txt  README.md  main.cpp
php/: config.ini  executor.php  index.php
